<resources>
  <string name="app_name">Kampus Ku</string>
  <string name="menu_kampus_ku">Kampus Ku</string>
  <string name="menu_tren">Tren</string>
  <string name="menu_beasiswa">Beasiswa</string>
  <string name="menu_sbmptn">SBMPTN</string>
  <string name="menu_akun">Akun</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="ptn_text">Nama PTN</string>
  <string name="web_ptn_text">Info Pendaftaran PTN</string>
  <string name="akreditasi_ptn_text">Akreditasi</string>
  <string name="rank_ptn_text">World Rank PTN</string>
  <string name="jumlah_prodi_text">Jumlah Prodi</string>
  <string name="provinsi_ptn_text">Provinsi</string>
  <string name="nama_prodi_text">Nama Prodi</string>
  <string name="daya_tampung_text">Kuota SBMPTN</string>
  <string name="daya_tampung_2018_text">Peminat SBMPTN 2018</string>
  <string name="persentase_kursi_text">Persentasi Keketatan Berdasar Tahun Lalu</string>
  <string name="jenis_portofolio_text">Jenis Portofolio</string>
  <string name="tipe_text">Tipe</string>
  <string name="sign_in">masuk</string>
  <string name="email_text">Email</string>
  <string name="nomor_indonesia_text">+62</string>
  <string name="kode_verifikasi_text">Password</string>
  <string name="sign_up">registrasi</string>
  <string name="error_field_required">Field dibutuhkan</string>
  <string name="app_login">App was login</string>
  <string name="nama_profile">Nama</string>
  <string name="telepon_profile">No Telepon</string>
  <string name="alamat_profile">Alamat Lengkap</string>
  <string name="asal_sekolah_profile">Asal Sekolah</string>
  <string name="sosial_media_profile">Sosial Media</string>
  <string name="instagram_profile">Instagram</string>
  <string name="facebook_profile">Facebook</string>
  <string name="bantuan_text">Bantuan</string>
  <string name="sign_out">Keluar</string>
  <string name="text_proyeksi">Proyeksikan Kampus Mu</string>
  <string name="konten_proyeksi">Fitur ini berguna untuk memproyeksikan kampus impian mu berdasarkan nilai UTBK
    yang telah kamu dapatkan sebelumnya, proyeksi itu dapat kamu gunakan untuk menyusun strategi kamu dalam memilih
    jurusan, adapun data yang kamu serahkan digunakan untuk keperluan internal aplikasi Kampus Ku.
    Semakin banyak yang berkontribusi dengan nilai UTBK ini, data akan semakin akurat.. Jadi kami sangat berharap
    kamu dapat memberitahukan teman - teman mu untuk menggunakan aplikasi ini, agar proyeksi bisa semakin akurat
  </string>
  <string name="input_utbk">Masukkan Nilai UTBK</string>
  <string name="lihat_proyeksi">Lihat Proyeksi</string>
  <string name="nilai_tps">Nilai TPS</string>
  <string name="nilai_kp_text">Masukkan nilai kemampuan penalaran umum</string>
  <string name="nilai_pk_text">Masukkan nilai pengetahuan kuantitatif</string>
  <string name="nilai_ppu_text">Masukkan nilai pengetahuan dan pemahaman umum</string>
  <string name="nilai_kmbm_text">Masukkan nilai kemampuan memahami bacaan dan menulis</string>
  <string name="nilai_saintek">Nilai TKA Saintek</string>
  <string name="nilai_f_text">Masukkan nilai fisika</string>
  <string name="nilai_ms_text">Masukkan nilai matematika saintek</string>
  <string name="nilai_k_text">Masukkan nilai kimia</string>
  <string name="nilai_b_text">Masukkan nilai biologi</string>
  <string name="nilai_soshum">Nilai TKA Soshum</string>
  <string name="nilai_ms_sos_text">Masukkan nilai matematika soshum</string>
  <string name="nilai_g_text">Masukkan nilai geografi</string>
  <string name="nilai_sejarah_text">Masukkan nilai sejarah</string>
  <string name="nilai_e_text">Masukkan nilai ekonomi</string>
  <string name="nilai_s_text">Masukkan nilai sosiologi</string>
  <string name="submit_nilai_text">Submit Nilai Mu</string>
  <string name="pilih_kampus1_text">Pilihan Kampus 1</string>
  <string name="pilih_kampus2_text">Pilihan Kampus 2</string>
  <string name="peringkat_text">Peringkat</string>
  <string name="total_pemilih_text">Total Pemilih</string>
  <string name="content_pilihan">Proyeksi ini hanya sebagai gambaran, agar kamu dapat menyusun strategi pilihan kampus
    mana yang akan kamu pilih. Untuk hasil resminya silakan tunggu hasil resmi dari LTMPT
  </string>
  <string name="rekomendasi_text">Rekomendasi</string>
  <string name="search">Cari Kampus</string>
  <string name="coming_soon">Fitur ini akan segera hadir, dalam beberapa minggu.</string>
  <string name="text_empty">Data Belum Tersedia</string>
  <string name="text_jurusan_populer">Jurusan Paling Populer</string>
  <string name="text_eksplorasi_jurusan">Eksplorasi Jurusan</string>
  <string name="text_mapel">Mata Pelajaran Terkait</string>
  <string name="text_tipe">Tipe Latar</string>
  <string name="text_popularitas">Popularitas</string>
  <string name="text_deskripsi">Deskripsi</string>
  <string name="text_alasanan_memilih">Alasan Kamu Memilih Ini</string>
  <string name="text_karakter_siswa">Karakter Yang Harus Kamu Miliki</string>
  <string name="text_prospek_kerja">Prospek Kerja</string>
  <string name="text_profesi_kerja">Profesi Kerja</string>
  <string name="text_kelompok">Kelompok</string>
  <string name="text_universitas_buka">Universitas Yang Membuka dan Akreditasinya</string>
  <string name="text_beasiswa">Beasiswa</string>
  <string name="text_kampus">Daftar Kampus</string>
  <string name="text_trend"><![CDATA[Tren & Eksplorasi Jurusan]]></string>
  <string name="text_profil">Profil</string>
  <string name="buat_akun">Buat Akun</string>
  <string name="text_auth">Masuk</string>
  <string name="text_input">Form Nilai</string>
  <string name="text_hasil_proyeksi">Hasil Proyeksi</string>
  <string name="search_jurusan">Cari Jurusan</string>
  <string name="text_deadline">Batas Daftar</string>
  <string name="text_kategori">Kategori</string>
  <string name="text_pembiayaan">Jenis</string>
  <string name="text_penyelenggara">Penyelenggara</string>
  <string name="text_komponen_beasiswa">Komponen Beasiswa</string>
  <string name="text_syarat_daftar">Persyaratan Pendaftar</string>
  <string name="text_berkas">Berkas Yang Diperlukan</string>
  <string name="text_cara_daftar">Proses Pendaftaran</string>
  <string name="search_beasiswa">Cari Beasiswa</string>
  <string name="tentang_text">Tentang Aplikasi</string>
  <string name="detail_profile">Detail Profil</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="content_about">Aplikasi ini digunakan untuk para siswa menemukan kampus - kampus
    Perguruan Tinggi Negeri (PTN), mengetahui informasi kampus dan jurusan - jurusan yang berada disana,
    Aplikasi ini juga akan memberikan informasi beasiswa untuk para siswa tersebut. Aplikasi ini
    dilengkapi fitur proyeksi SBMPTN dengan referensi perhitungan yang sudah divalidasi. Kedepannya
    Aplikasi ini akan menyediakan fitur review kampus dan jurusan serta Daftar Pekerjaan. Selain itu
    Aplikasi ini akan menyediakan fitur untuk test psikologi sehingga akan ada sistem rekomendasi jurusan
    berdasarkan hasil testnya.
  </string>
  <string name="tentang_data_text">Tentang Data</string>
  <string name="content_data_about">Data bersumber dari data sekunder namun tetap dari instansi
    resmi dan valid. Data sekunder merupakan data yang diperoleh dari sumber yang sudah ada. Data
    tersebut diambil dari data yang ada di website sbmptn.ltmpt.ac.id dan banpt.or.id
  </string>
  <string name="tentang_developer_text">Tentang Developer</string>
  <string name="content_developer_about">Developer merupakan seorang Mahasiswa di Universitas Brawijaya\nUntuk
    lebih lengkapnya bisa berkunjung melalui instagram ataupun facebook rahmanarifofficial\nUntuk
    keperluan bisnis lainnya dapat menghubungi email rahmanarifofficial@gmail.com
  </string>
  <string name="hubungi_developer">Hubungi Developer</string>
  <string name="text_tanya">Tuliskan pertanyaan Anda Disini</string>
  <string name="kirim">kirim</string>
  <string name="refresh">Klik untuk Refresh</string>
  <string name="favorites">Favorites Item</string>
  <string name="tambah_favorite">Disimpan Ke Favorite</string>
  <string name="hapus_favorite">Dihapus dari Favorite</string>
</resources>
