<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white"
    android:orientation="vertical">

  <TextView
      android:text="@string/nilai_saintek"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/neosansblack"
      android:textSize="13sp"/>

  <EditText
      android:id="@+id/et_nilai_ms"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/nilai_ms_text"
      android:textSize="12sp"/>

  <EditText
      android:id="@+id/et_nilai_f"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/nilai_f_text"
      android:textSize="12sp"/>

  <EditText
      android:id="@+id/et_nilai_k"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/nilai_k_text"
      android:textSize="12sp"/>

  <EditText
      android:id="@+id/et_nilai_b"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/nilai_b_text"
      android:textSize="12sp"/>

</LinearLayout>