<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".view.NewProfileFragment"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_foto_profil_new_akun"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_add_a_photo"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/et_nama_new_akun"
            android:textSize="15sp"
            android:hint="@string/nama_profile"/>
      </LinearLayout>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:inputType="phone"
          android:id="@+id/et_telepon_new_akun"
          android:textSize="15sp"
          android:hint="@string/telepon_profile"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:inputType="textMultiLine"
          android:maxLines="3"
          android:gravity="top"
          android:id="@+id/et_alamat_new_akun"
          android:textSize="15sp"
          android:hint="@string/alamat_profile"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:inputType="text"
          android:gravity="top"
          android:id="@+id/et_asal_sekolah_new_akun"
          android:textSize="15sp"
          android:hint="@string/asal_sekolah_profile"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:gravity="top"
          android:fontFamily="@font/neosansblack"
          android:textSize="15sp"
          android:hint="@string/sosial_media_profile"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:inputType="text"
          android:gravity="top"
          android:id="@+id/et_instagram_new_akun"
          android:textSize="15sp"
          android:hint="@string/instagram_profile"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:inputType="text"
          android:gravity="top"
          android:id="@+id/et_facebook_new_akun"
          android:textSize="15sp"
          android:hint="@string/facebook_profile"/>

      <Button
          android:text="@string/sign_up"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/colorPrimary"
          android:textColor="@android:color/white"
          android:id="@+id/btn_daftar_new_akun"
          android:layout_marginTop="16dp"/>
    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_registrasi"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
  </RelativeLayout>
</ScrollView>